  - moved 'user_shortcut' bochsrc option to the 'keyboard' option
  - save log options per device to bochsrc
  - win32: implemented scrollable dialog items for large parameter lists

- GUI and display libraries
  - Graphics snapshot feature rewritten to support all kinds of graphics modes
  - wx: starting a second simulation without closing Bochs now almost possible

-------------------------------------------------------------------------
Changes in 2.6 (September 2, 2012):

Brief summary :
- More than 10% CPU emulation speedup !
- Support for AMD's SVM hardware emulation (including extended XAPIC support).
- Implemented support for new x86 ISA extensions.
  Bochs is fully aligned with rev043 of Intel(R) Architecture Manual.
- Improved emulation accuracy (critical fixes for APIC, VMX and AVX/XOP emulation).
- Bochs internal debugger: new command to show state of a device from the debugger.
- ROM BIOS: improved PCI boot ROM support (for VGA and other devices)
- Networking:
    - Ported Intel(R) 82540EM Gigabit Ethernet adapter emulation from Qemu.
    - Added PCI network boot ROM support to all network adapters.
    - Added TFTP support to the 'slirp' networking module.
- Harddrive: added support for VirtualPC disk images, fixed sparse disk images.
- Sound:
    - implemented PC speaker beep using the lowlevel sound interface.
    - SDL audio output support.
- Added ability to set log action per device from .bochsrc.
- Moved disk imaging, networking, sound and USB devices to subdirectories
  in the iodev folder.

Detailed change log :

- CPU
  - Implemented EPT A/D extensions support.
    Bochs is fully aligned with rev043 of the of Intel(R) Architecture Manual.
  - Implemented ADX (ADCX/ADOX) instructions support, the feature can
    be enabled using .bochsrc CPUID option.
  - More than 10% CPU emulation speedup with even more optimal lazy flags
    handling, stack access optimizations and cross branch trace linking.